# wasm_wash_template

./: .gitignore  Cargo.toml  flake.nix
src/: lib.rs
