[package]
name = "dog-fetcher"
edition = "2021"
version = "0.1.1"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmcloud-component = { version = "0.2.0", features = ["http", "rand"] }
wasi = "0.13.2"
wit-bindgen = "0.32"


[package.metadata.component]
package = "wasmcloud:hello"
